--- a/app/views/layouts/_contact_form.html.erb
+++ b/app/views/layouts/_contact_form.html.erb
@@ -7,7 +7,7 @@
         Have questions? Want to talk about your options? Wondering how much this is going to cost?
         Send us a message and we'll do what we can to make your wildest dreams come true.
       </div>      
-      <%= form_for ContactForm.new, :url => { :action => "sendit" , :anchor => "new_contact_form" }, html: {class: "form-horizontal"} do |f| %>
+      <%= form_for ContactForm.new, :url => "/send#contact_form", html: {class: "form-horizontal", id: "contact_form"} do |f| %>
         <div class="row">
 
           <div class="col-md-6 col-xs-12" id='name-input'><%= f.text_field :name, placeholder: "Name", class: 'form-control' %></div>
