Wrapped all content in a container/row so that it will scale properly on mobile.

--- a/app/assets/stylesheets/static_pages.css.sass
+++ b/app/assets/stylesheets/static_pages.css.sass
@@ -19,7 +19,7 @@ html, body
   background: $background-color
   margin: 0
   height: 100%
-  width: 100%
+  width: 100% !important
 
 h1
   font-family: $heading-font
