--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-    <%= "#{@title} | "if defined?(@title) %>Presetter</title>
+    <title><%= "#{@title} | "if defined?(@title) %>Presetter</title>    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-  	<%= render "layouts/navigation" %>
+  <body class='container-fluid'>
+    <div class="row">
+  	  <%= render "layouts/navigation" %>
       <%= yield %>
+    </div>
   </body>
 </html>
