Adjusted mobile layouts, and changed mailer to MailGun

--- a/app/views/layouts/_landing.html.erb
+++ b/app/views/layouts/_landing.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <div class="jumbotron-content">
-    <h1>Your beautiful presets deserve a beautiful installer</h1>
+    <h1>No more drag + drop.<br/>Let's put your presets where they belong</h1>
   </div>
   <div class="arrow bounce">
     
