--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,3 @@
 <header>
-    <h1>
-      <span class="accent-color">Pre</span>setter.</h1>
+    <h1><span class="accent-color">Pre</span>setter.</h1>
 </header>
