--- a/app/assets/stylesheets/static_pages.css.sass
+++ b/app/assets/stylesheets/static_pages.css.sass
@@ -11,8 +11,8 @@ $secondary-accent-color: #BFB48F //dark tan
 $background-color: #F2EFE9
 $font-color: #252627
 $heading-font: 'Futura', sans-serif
-$iphone-screen: 736px
 $jumbotron-banner-image: image-url('banner.jpg')
+$iphone-screen: 736px
 
 html, body
   color: $font-color
@@ -24,14 +24,20 @@ html, body
 h1
   font-family: $heading-font
   font-size: 3.0em
+  @media (max-width: $iphone-screen)
+    font-size: 2.5em
 
 h2
   font-family: $heading-font
   font-size: 2.6em
+  @media (max-width: $iphone-screen)
+    font-size: 2em
 
 header
   text-align: center
   height: 5em
+  @media (max-width: $iphone-screen)
+    height: 4.4em
   background: rgba(10,10,10, .25)
   width: 100%
   z-index: 1000
@@ -61,6 +67,7 @@ hr
   background-repeat: no-repeat
   background-attachment: fixed
   background-position: center
+  border-radius: 0 !important
   position: relative
   @media (max-width: $iphone-screen)
     background-attachment: scroll
@@ -82,6 +89,8 @@ hr
   right: 14px
   a
     color: white
+  @media (max-width: $iphone-screen)
+    font-size: .7em
 
 .section
   margin-bottom: 2em
@@ -89,6 +98,8 @@ hr
 .section-header
   text-align: center
   margin-top: 2.6em
+  @media (max-width : $iphone-screen) 
+    margin-top: 1.4em
   margin-bottom: 1.0em
 
 .feature
@@ -144,7 +155,6 @@ form
   margin-top: 40px
   @media (max-width: $iphone-screen)
     margin-top: 20px
-    margin-bottom: -40px
   margin-bottom: -15px
 
 @media only screen and (max-width : 992px) 
