Added Segoe font to heading stack for Windows fools

--- a/app/assets/stylesheets/static_pages.css.sass
+++ b/app/assets/stylesheets/static_pages.css.sass
@@ -10,7 +10,7 @@ $accent-color: rgb(180,64,76)
 $secondary-accent-color: #BFB48F //dark tan
 $background-color: #F2EFE9
 $font-color: #252627
-$heading-font: 'Futura', sans-serif
+$heading-font: 'Futura', 'Segoe UI Semilight', sans-serif
 $jumbotron-banner-image: image-url('banner.jpg')
 $iphone-screen: 736px
 
