--- a/app/views/layouts/_features.html.erb
+++ b/app/views/layouts/_features.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="feature col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0">
       <h3>Easy + Simple</h3>
-      Make it easy for your customers. No more dragging + dropping preset files into hidden folders in the depths of your computer. We'll put your presets right where they need to be without any fuss.b
+      Make it easy for your customers. No more dragging + dropping preset files into hidden folders in the depths of your computer. We'll put your presets right where they need to be without any fuss.
     </div>
     <div class="feature col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0">
       <h3>
